// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Checked 1`] = `
<div>
  <label
    class="relative flex flex-row items-center select-none"
  >
    <svg
      class="absolute left-0 w-5 h-5 text-white"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z"
      />
    </svg>
     
    <input
      class="flex-shrink-0 inline-block w-5 h-5 align-middle transition duration-300 ease-in-out bg-white border outline-none appearance-none text-main-500 rounded-shape focus:shadow-outline focus:border-main-400 checked:bg-main-400 checked:border-main-400"
      type="checkbox"
    />
     
    <span
      class="ml-3 leading-tight text-gray-600 font-heading"
    >
      Test Checkbox
    </span>
  </label>
</div>
`;

exports[`Renders Correctly - Unchecked 1`] = `
<div>
  <label
    class="relative flex flex-row items-center select-none"
  >
    <svg
      class="absolute left-0 w-5 h-5 text-white"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z"
      />
    </svg>
     
    <input
      class="flex-shrink-0 inline-block w-5 h-5 align-middle transition duration-300 ease-in-out bg-white border outline-none appearance-none text-main-500 rounded-shape focus:shadow-outline focus:border-main-400 checked:bg-main-400 checked:border-main-400"
      type="checkbox"
    />
     
    <span
      class="ml-3 leading-tight text-gray-600 font-heading"
    >
      Another Input
    </span>
  </label>
</div>
`;
